Use old-style collectors